fix modepage z-index issue

--- a/frontend/src/components/nav/navbar.scss
+++ b/frontend/src/components/nav/navbar.scss
@@ -1,6 +1,7 @@
 .nav {
   display: flex;
   position: fixed;
+  z-index: 100;
   width: 100%;
   padding: 2em;
   border-bottom-left-radius: 3em;
@@ -9,7 +10,6 @@
   align-items: center;
   justify-content: space-between;
 }
-
 
 .nav__play {
   position: relative;
@@ -52,30 +52,28 @@
   span {
     margin-left: 5px;
   }
-  .logout-button:hover{
+  .logout-button:hover {
     cursor: pointer;
     color: var(--clr-yellow);
     animation: rainbow-play 2s infinite;
     animation-direction: alternate;
   }
 
-  &:hover .user-icon{
+  &:hover .user-icon {
     cursor: pointer;
     color: var(--clr-yellow);
     animation: rainbow-play 2s infinite;
     animation-direction: alternate;
   }
 }
-.nav__btn-login:hover{
-    cursor: pointer;
-    color: var(--clr-yellow);
-    animation: rainbow-play 2s infinite;
-    animation-direction: alternate;
-  }
+.nav__btn-login:hover {
+  cursor: pointer;
+  color: var(--clr-yellow);
+  animation: rainbow-play 2s infinite;
+  animation-direction: alternate;
+}
 
-
-
-.logout-text{
+.logout-text {
   position: relative;
   top: -4px;
 }
@@ -95,55 +93,54 @@
   align-items: end;
   color: black;
 }
-.user-icon{
+.user-icon {
   font-size: 30px;
 }
-.user-dropdown{
-position: absolute;
-	display: none;
+.user-dropdown {
+  position: absolute;
+  display: none;
   top: 65px;
 
   right: 32px;
-	background-color: #fff;
-	border: 1px solid lightgray;
-	border-radius: 8px;
-	padding: 19px;
-    width: 190px;
-    height: 120px;
-	z-index: 1;
-	text-align: left;
-	box-shadow: -1px 4px 6px 1px rgba(0,0,0,0.09);
-    font-weight: initial;
+  background-color: #fff;
+  border: 1px solid lightgray;
+  border-radius: 8px;
+  padding: 19px;
+  width: 190px;
+  height: 120px;
+  z-index: 1;
+  text-align: left;
+  box-shadow: -1px 4px 6px 1px rgba(0, 0, 0, 0.09);
+  font-weight: initial;
 }
 
-.nav__btn-logout:hover .user-dropdown{
-  &.user-dropdown{
-
+.nav__btn-logout:hover .user-dropdown {
+  &.user-dropdown {
     display: block;
   }
 }
 .user-dropdown:before {
-    content: "";
-    width: 4;
-    height: 4;
-    position: absolute;
-    bottom: 100%;
-    right: 5px;
-    border-width: 0 8px 8px 8px;
-    border-style: solid;
-    border-color: rgba(0,0,0,0.1) transparent;    
+  content: "";
+  width: 4;
+  height: 4;
+  position: absolute;
+  bottom: 100%;
+  right: 5px;
+  border-width: 0 8px 8px 8px;
+  border-style: solid;
+  border-color: rgba(0, 0, 0, 0.1) transparent;
 }
 
-.user-dropdown:after{
-    content: "";
-    width: 4;
-    height: 4;
-    position: absolute;
-    bottom: 100%;
-    right: 7px;
-    border-width: 0 6px 6px 6px;
-    border-style: solid;
-    border-color: #fff transparent;    
+.user-dropdown:after {
+  content: "";
+  width: 4;
+  height: 4;
+  position: absolute;
+  bottom: 100%;
+  right: 7px;
+  border-width: 0 6px 6px 6px;
+  border-style: solid;
+  border-color: #fff transparent;
 }
 
 @keyframes rainbow-play {
@@ -154,5 +151,3 @@ position: absolute;
     filter: hue-rotate(360deg);
   }
 }
-
-
